--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,5 @@
+    <meta name="robots" content="noindex, nofollow">
+
     <!-- Metadata, OpenGraph and Schema.org -->
     {% include metadata.html %}
 
